--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-    <script src="../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>    <!-- JQuery -->
+    <script src="../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+    <!-- JQuery -->
+    <!-- Custom css -->
+    <link href="../static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}"/>
+
 </head>
 <body>
 <div class="container">
@@ -14,7 +18,14 @@
         <div class="col"></div>
         <div class="col-6 bg-light">
             <h3>Chat</h3>
+            <form>
+                <div class="message-input">
+                    <input type="text" placeholder="Write your message..." />
+                    <button class="submit"></button>
+                </div>
+            </form>
         </div>
+
         <div class="col"></div>
     </div>
 </div>
