--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -12,12 +12,12 @@
 
 </head>
 <body>
-<div class="container">
-    <h3 th:text="Wikibot"></h3>
-    <div class="row">
+<div class="container h-100">
+    <div class="row h-100">
         <div class="col"></div>
-        <div class="col-6 bg-light">
+        <div class="col-6 mt-1 bg-light h-75">
             <h3>Chat</h3>
+
             <form>
                 <div class="message-input">
                     <input type="text" placeholder="Write your message..." />
