Bootstrap messages container layout

--- a/wikibot/src/main/resources/static/css/style.css
+++ b/wikibot/src/main/resources/static/css/style.css
@@ -2,8 +2,8 @@ html,body {
     height: 100%;
 }
 
-.message-input {
+.input_message {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    background-color: lightblue;
 }
