--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -3,12 +3,8 @@
 <head>
     <title>Wikibot</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!-- JQuery -->
-    <script src="../static/js/jquery-3.4.1.min.js" th:src="@{/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-    <script src="../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
-
     <!-- Custom css -->
     <link href="../static/css/style.css" rel="stylesheet" th:href="@{/css/style.css}"/>
 
@@ -19,7 +15,7 @@
         <div class="col"></div>
         <div class="col-xl-8 col-10 my-auto h-75 p-0 bg-light">
             <div class="h-100 d-flex flex-column">
-                <div class="row bg-light flex-grow-1 overflow-auto p-4">
+                <div class="row bg-light flex-grow-1 overflow-auto p-4" id="messages_div">
                     <!-- Messages-->
                     <ul class="list-group w-100">
                         <li>
@@ -65,4 +61,15 @@
     </div>
 </div>
 </body>
+<script src="../static/js/bootstrap.js" th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+<!-- JQuery -->
+<script src="../static/js/jquery-3.4.1.min.js" th:src="@{/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
+<script>
+    $(document).ready(function(){
+        console.log("ready");
+        var scroll = $('#messages_div');
+        var height = scroll[0].scrollHeight;
+        scroll.scrollTop(height);
+    });
+</script>
 </html>
