--- a/wikibot/src/main/resources/static/css/style.css
+++ b/wikibot/src/main/resources/static/css/style.css
@@ -7,6 +7,8 @@ html,body {
 }
 .card {
     margin-bottom:15px;
+    min-width:60px;
+    max-width:75%;
 }
 
 .card.chat-recv {
@@ -17,4 +19,28 @@ html,body {
     background-color: #D7F6F6;
     float: right;
 
+}
+
+.main-navbar {
+    position:absolute;
+    width:100%;
+    box-sizing: border-box;
+    z-index: 2;
+}
+
+.main-container {
+    height:100%;
+    min-height: 100%;
+    margin:0;
+    padding:0;
+}
+.main-body {
+    box-sizing: border-box;
+    padding-top: 70px;
+    padding-bottom: 14px;
+    z-index: 1;
+    margin: 0;
+}
+.bg-chat {
+    background-color: #eeeeee; !important;
 }
