List based on conditions
TODO: Fix list subclass to utilize rank and prevent multiple names occurring

--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
                                         <span th:text="${m.content}"></span>
                                     </div>
                                 </div>
-                                <div th:case="${T(com3001.at00672.mode.Sender).BOT}" class="card chat-recv shadow-sm rounded">
+                                <div th:case="${T(com3001.at00672.model.Sender).BOT}" class="card chat-recv shadow-sm rounded">
                                     <div class="card-body py-3">
                                         <span th:text="${m.content}"></span>
                                     </div>
