Fixed web interface for lists and new modelling

--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -39,7 +39,14 @@
                                 </div>
                                 <div th:case="${T(com3001.at00672.model.Sender).BOT}" class="card chat-recv shadow-sm rounded">
                                     <div class="card-body py-3">
-                                        <span th:text="${m.content}"></span>
+                                        <span th:if="${m.messageItems.size() == 0}" th:text="${m.content}"/>
+                                        <span th:unless="${m.messageItems.size() == 0}">
+                                            <ul>
+                                                <li th:each="item: ${m.messageItems}">
+                                                    <p th:text="${item.content}"/>
+                                                </li>
+                                            </ul>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
