--- a/wikibot/src/main/resources/static/css/style.css
+++ b/wikibot/src/main/resources/static/css/style.css
@@ -63,3 +63,11 @@ html,body {
     max-width: 75%;
     padding-left: 10px;
 }
+
+.ul-messages {
+    padding-inline-start: 0px;
+}
+
+.message-item {
+    padding-inline-start:0px;
+}
