--- a/wikibot/src/main/resources/templates/index.html
+++ b/wikibot/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="../static/css/bootstrap.css" type="text/css" th:href="@{/css/bootstrap.css}"/>
     <link rel="stylesheet" href="../static/css/style.css" type="text/css" th:href="@{/css/style.css}"/>
-
 </head>
 <body>
 
@@ -52,7 +51,7 @@
 
                                                     </p>
                                                     <ul>
-                                                        <li><a href="card-link">Wikipedia</a></li>
+                                                        <li><a class="card-link" th:href="*{m.getWikipediaURL()}">Wikipedia</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -108,11 +107,14 @@
 <script src="../static/js/jquery-3.4.1.min.js" th:src="@{/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
 <script>
     $(document).ready(function(){
-        console.log("ready");
         var scroll = $('#messages_div');
         var height = scroll[0].scrollHeight;
         scroll.scrollTop(height);
         $('input:text').val('').focus();
     });
+    window.onload = function () {
+        var loadTime = window.performance.timing.domContentLoadedEventEnd-window.performance.timing.navigationStart;
+        console.log('Page load time is '+ loadTime + 'ms');
+    }
 </script>
 </html>
